favicon icon and deleting many cds at once

--- a/src/app/management/cds-management/cd-list/cd-list.component.html
+++ b/src/app/management/cds-management/cd-list/cd-list.component.html
@@ -27,7 +27,7 @@
                 <td>{{cd.year}}</td>
                 <td>{{cd.genre}}</td>
                 <td class="action" (click)="editElement(cd)">Edytuj</td>
-                <td class="action" (click)="deleteElement(cd.id)">Usuń</td>
+                <td class="action" (click)="deleteElement(cd.id, false)">Usuń</td>
             </tr>
         </table>
     </div>
