--- a/src/app/management/list-styles.scss
+++ b/src/app/management/list-styles.scss
@@ -1,24 +1,34 @@
+.management-card {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+}
+
 .management-header {
     display: flex;
     flex-direction: row;
     flex: 1;
+    padding: 10px 20px;
     align-items: center;
-    padding: 10px 25px;
+    justify-content: space-between;
     background-color: ghostwhite;
     border-bottom: 2px solid lightgray;
     margin-bottom: 30px;
 }
 
 .management-title {
-    flex: 1;
+    font-size: x-large;
 }
 
 .user-management-actions {
+    padding: 10px 0px;
+
     a {
         padding: 10px 20px;
-        margin-left: 5px;
+        margin-left: 10px;
         border: 1px solid;
         cursor: pointer;
+
         &:hover {
             background-color: lightgray;
         }
@@ -30,6 +40,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+
     input[type="checkbox"] {
         cursor: pointer;
     }
@@ -52,6 +63,7 @@
     color: gray;
     background-color: lightgray;
     cursor: not-allowed;
+
     &:hover {
         background-color: lightgray;
     }
@@ -68,6 +80,7 @@
 .action {
     cursor: pointer;
     background-color: whitesmoke;
+
     &:hover {
         background-color: lightgray;
     }
