--- a/src/app/navigation/top-navbar/top-navbar.component.scss
+++ b/src/app/navigation/top-navbar/top-navbar.component.scss
@@ -2,16 +2,16 @@
     display: flex;
     flex-direction: row;
     flex: 1;
-    background-color: ghostwhite;
-    padding: 10px 40px;
     align-items: center;
+    justify-content: center;
+    background-color: ghostwhite;
     height: 100px;
     border-bottom: 2px solid lightgray;
 }
 
 .top-navigation-title {
     color: black;
-    font-size: 95px;
+    font-size: 75px;
     font-family: "Brush Script MT", "Times New Roman", serif;
-    text-shadow: 4px 4px gray;
+    text-shadow: 4px 4px lightgray;
 }
