--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<app-top-navbar></app-top-navbar>
+<div class="app">
+    <div class="header">
+        <app-top-navbar></app-top-navbar>
+    </div>
+    <div class="content">
+        <app-side-navbar></app-side-navbar>
+    </div>
+    <div class="footer">
+
+    </div>
+</div>
