--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     </div>
     <div class="content">
         <app-side-navbar></app-side-navbar>
+        <app-cd-list></app-cd-list>
     </div>
     <div class="footer">
 
