--- a/src/app/navigation/side-navbar/side-navbar.component.html
+++ b/src/app/navigation/side-navbar/side-navbar.component.html
@@ -1,10 +1,7 @@
 <div class="side-navigation">
     <div class="side-navigation-entries">
-        <p>Posiadane płyty cd</p>
-        <p>Pożądane płyty cd</p>
-        <p>Kolejny testowy wpis</p>
-        <p>Ciekawe co jeszce</p>
-        <p>No i ostatni</p>
+        <a>Posiadane płyty CD</a>
+        <a>Pożądane płyty CD</a>
+        <a>Statystyki</a>
     </div>
-
 </div>
