--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,13 @@
 .app {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    height: 100%;
+    width: 100%;
 }
 
 .content {
     display: flex;
     flex-direction: row;
-    flex: 1;
-    background-color: green;
+    width: 100%;
+    height: 100%;
 }
