--- a/src/app/management/list-styles.scss
+++ b/src/app/management/list-styles.scss
@@ -1,7 +1,8 @@
 .management-card {
     display: flex;
-    flex: 1;
     flex-direction: column;
+    flex: 1;
+    width: 100%;
 }
 
 .management-header {
