finally fullyfilled (or however) parent <3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,9 @@
     <div class="header">
         <app-top-navbar></app-top-navbar>
     </div>
-    <div class="content">
+    <div class="body">
         <app-side-navbar></app-side-navbar>
-        <app-cd-list></app-cd-list>
+        <div class="content">
+            <app-cd-list></app-cd-list>
+        </div>
     </div>
-    <div class="footer">
-
-    </div>
-</div>
