--- a/src/app/navigation/side-navbar/side-navbar.component.html
+++ b/src/app/navigation/side-navbar/side-navbar.component.html
@@ -4,4 +4,7 @@
         <a>Pożądane płyty CD</a>
         <a>Statystyki</a>
     </div>
+    <div class="side-navigation-sign">
+        #Kostrzewscy
+    </div>
 </div>
