--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,12 +2,16 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 100%;
+}
+
+.body {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
 }
 
 .content {
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 100%;
+    flex-direction: column;
+    flex: 1;
 }
