--- a/src/app/navigation/side-navbar/side-navbar.component.scss
+++ b/src/app/navigation/side-navbar/side-navbar.component.scss
@@ -20,3 +20,13 @@
         }
     }
 }
+
+.side-navigation-sign {
+    text-align: center;
+    padding: 10px 0px;
+    font-family: "Brush Script MT", "Times New Roman", serif;
+    font-size: x-large;
+    font-weight: bold;
+    text-shadow: 2px 2px lightgray;
+    cursor: default;
+}
