routes and simple cds service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
     <div class="body">
         <app-side-navbar></app-side-navbar>
         <div class="content">
-            <app-cd-list></app-cd-list>
+            <router-outlet></router-outlet>
         </div>
     </div>
