--- a/src/app/navigation/side-navbar/side-navbar.component.html
+++ b/src/app/navigation/side-navbar/side-navbar.component.html
@@ -1,8 +1,8 @@
 <div class="side-navigation">
     <div class="side-navigation-entries">
-        <a>Posiadane płyty CD</a>
-        <a>Pożądane płyty CD</a>
-        <a>Statystyki</a>
+        <a routerLink="owned" routerLinkActive="active-link">Posiadane płyty CD</a>
+        <a routerLink="wanted" routerLinkActive="active-link">Pożądane płyty CD</a>
+        <a routerLink="statistics" routerLinkActive="active-link">Statystyki</a>
     </div>
     <div class="side-navigation-sign">
         #Kostrzewscy
