first sorting approach

--- a/src/app/management/cds-management/cd-list/cd-list.component.html
+++ b/src/app/management/cds-management/cd-list/cd-list.component.html
@@ -32,6 +32,22 @@
                     <td><input type="text" placeholder="Gatunek" size="10"></td>
                     <td><button>Filtruj</button></td>
                 </tr>
+                <tr>
+                    <td colspan="7">
+                        <div>Sortowanie:
+                            <select>
+                                <option>Zespół - Rosnąco</option>
+                                <option>Zespół - Malejąco</option>
+                                <option>Album - Rosnąco</option>
+                                <option>Album - Malejąco</option>
+                                <option>Rok Wydania - Rosnąco</option>
+                                <option>Rok Wydania - Malejąco</option>
+                                <option>Gatunek - Rosnąco</option>
+                                <option>Gatunek - Malejąco</option>
+                            </select>
+                        </div>
+                    </td>
+                </tr>
             </table>
         </div>
         <div class="content-table">
