second approach of sorting

--- a/src/app/management/cds-management/cd-list/cd-list.component.html
+++ b/src/app/management/cds-management/cd-list/cd-list.component.html
@@ -32,23 +32,37 @@
                     <td><input type="text" placeholder="Gatunek" size="10"></td>
                     <td><button>Filtruj</button></td>
                 </tr>
-                <tr>
-                    <td colspan="7">
-                        <div>Sortowanie:
-                            <select>
-                                <option>Zespół - Rosnąco</option>
-                                <option>Zespół - Malejąco</option>
-                                <option>Album - Rosnąco</option>
-                                <option>Album - Malejąco</option>
-                                <option>Rok Wydania - Rosnąco</option>
-                                <option>Rok Wydania - Malejąco</option>
-                                <option>Gatunek - Rosnąco</option>
-                                <option>Gatunek - Malejąco</option>
-                            </select>
-                        </div>
-                    </td>
-                </tr>
             </table>
+            <div class="righttt">
+                <table>
+                    <tr>
+                        <td colspan="3">
+                            <p>Sortowanie</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Kolumna</td>
+                        <td>Sposób</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <select>
+                            <option>Zespół</option>
+                            <option>Album</option>
+                            <option>Rok wydania</option>
+                            <option>Gatunek</option>
+                        </select>
+                        </td>
+                        <td>
+                            <select>
+                            <option>Rosnąco</option>
+                            <option>Malejąco</option>
+                        </select>
+                        </td>
+                        <td><button>Sortuj</button></td>
+                    </tr>
+                </table>
+            </div>
         </div>
         <div class="content-table">
             <table>
