--- a/src/app/management/list-styles.scss
+++ b/src/app/management/list-styles.scss
@@ -66,7 +66,6 @@
     text-align: start;
     padding: 20px;
     margin: 30px;
-    border-bottom: 1px solid lightgray;
     p {
         font-size: x-large;
         font-weight: bold;
@@ -80,6 +79,9 @@
             padding: 5px 15px;
             cursor: pointer;
         }
+    }
+    table {
+        border-bottom: 1px solid lightgray;
     }
 }
 
@@ -105,4 +107,9 @@
     color: gray;
     background-color: whitesmoke;
     cursor: default;
+}
+
+.righttt {
+    display: flex;
+    justify-content: flex-end;
 }
