--- a/src/app/management/cds-management/cd-list/cd-list.component.html
+++ b/src/app/management/cds-management/cd-list/cd-list.component.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="management-content">
-        <div class="filters">
+        <div class="options">
             <table>
                 <tr>
                     <td colspan="7">
@@ -32,37 +32,29 @@
                     <td><input type="text" placeholder="Gatunek" size="10"></td>
                     <td><button>Filtruj</button></td>
                 </tr>
+                <tr>
+                    <td colspan="7">
+                        <p>Sortowanie</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <select>
+                        <option>Zespół</option>
+                        <option>Album</option>
+                        <option>Rok wydania</option>
+                        <option>Gatunek</option>
+                    </select>
+                    </td>
+                    <td>
+                        <select>
+                        <option>Rosnąco</option>
+                        <option>Malejąco</option>
+                    </select>
+                    </td>
+                    <td colspan="5"><button>Sortuj</button></td>
+                </tr>
             </table>
-            <div class="righttt">
-                <table>
-                    <tr>
-                        <td colspan="3">
-                            <p>Sortowanie</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Kolumna</td>
-                        <td>Sposób</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <select>
-                            <option>Zespół</option>
-                            <option>Album</option>
-                            <option>Rok wydania</option>
-                            <option>Gatunek</option>
-                        </select>
-                        </td>
-                        <td>
-                            <select>
-                            <option>Rosnąco</option>
-                            <option>Malejąco</option>
-                        </select>
-                        </td>
-                        <td><button>Sortuj</button></td>
-                    </tr>
-                </table>
-            </div>
         </div>
         <div class="content-table">
             <table>
