--- a/src/app/management/list-styles.scss
+++ b/src/app/management/list-styles.scss
@@ -64,9 +64,9 @@
 
 .options {
     text-align: start;
-    padding: 20px;
+    padding: 0 20px;
     margin: 30px;
-    p {
+    span {
         font-size: x-large;
         font-weight: bold;
     }
