--- a/src/app/management/cds-management/cd-list.component.html
+++ b/src/app/management/cds-management/cd-list.component.html
@@ -1,7 +1,7 @@
 <div class="management-card">
     <div class="management-header">
         <div class="management-title">
-            Lista posiadanych płyt
+            {{title}}
         </div>
         <div class="user-management-actions">
             <a (click)="addElement()">Dodaj</a>
