--- a/src/app/management/cds-management/cd-form/cd-form.component.html
+++ b/src/app/management/cds-management/cd-form/cd-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addCdForm" (submit)="onSubmit()" (reset)="onReset()">
+<form [formGroup]="addCdForm" (submit)="onSubmit()">
     <table>
         <tr>
             <th colspan="2">
@@ -25,6 +25,6 @@
     </table>
     <div class="form-actions">
         <button type="reset">Wyczyść formularz</button>
-        <button type="submit">Dodaj do bazy</button>
+        <button type="submit">Dodaj</button>
     </div>
 </form>
