--- a/src/app/navigation/side-navbar/side-navbar.component.html
+++ b/src/app/navigation/side-navbar/side-navbar.component.html
@@ -1,8 +1,10 @@
 <div class="side-navigation">
     <div class="side-navigation-entries">
-        <a routerLink="owned" routerLinkActive="active-link">Posiadane płyty CD</a>
-        <a routerLink="wanted" routerLinkActive="active-link">Pożądane płyty CD</a>
-        <a routerLink="statistics" routerLinkActive="active-link">Statystyki</a>
+        <a routerLink="cds/owned" routerLinkActive="active-link">Posiadane płyty CD</a>
+        <a routerLink="cds/wanted" routerLinkActive="active-link">Pożądane płyty CD</a>
+        <a routerLink="books/owned" routerLinkActive="active-link">Posiadane książki</a>
+        <a routerLink="books/wanted" routerLinkActive="active-link">Pożądane książki</a>
+        <!-- <a routerLink="statistics" routerLinkActive="active-link">Statystyki</a> -->
     </div>
     <div class="side-navigation-sign">
         #Kostrzewscy
