--- a/src/app/management/form-styles.scss
+++ b/src/app/management/form-styles.scss
@@ -5,6 +5,11 @@ table {
         margin-left: 10px;
         padding: 3px 5px 3px 5px;
     }
+    select {
+        min-width: 150px;
+        margin-left: 10px;
+        padding: 3px 5px 3px 5px;
+    }
 }
 
 .form-actions {
