refreshing after delete

--- a/src/app/management/books-management/book-list.component.html
+++ b/src/app/management/books-management/book-list.component.html
@@ -7,6 +7,8 @@
             <a (click)="addElement()">Dodaj</a>
             <a (click)="deleteCheckedElements()" [ngClass]="formManagement.anythingChecked() ? '' : 'disabled-when-none-checked'">Usuń</a>
             <a (click)="refreshElements()">Odśwież</a>
+            <a (click)="uploadFileButton()">Wgraj plik</a>
+            <input id="uploadFileInput" type="file" (change)="uploadFile($event)" hidden>
         </div>
     </div>
     <div class="management-content">
@@ -72,7 +74,7 @@
                     <td>{{book.title}}</td>
                     <td>{{book.year}}</td>
                     <td class="action" (click)="editElement(book)">Edytuj</td>
-                    <td class="action" (click)="deleteElement(book.id, false)">Usuń</td>
+                    <td class="action" (click)="deleteElement(book.id)">Usuń</td>
                 </tr>
                 <tr *ngIf="getBooksToDisplay().length === 0">
                     <td colspan="6" class="no-cds-info">
